compilelog
In file included from /Users/maochun/esp32prj/esp-idf/components/esp_wifi/include/esp_wifi.h:53,
                 from /Users/maochun/esp32prj/Project_CAM/branch/ota_GW/ota_gw/protocol/wifi_ap/wifi_ap.h:4,
                 from /Users/maochun/esp32prj/Project_CAM/branch/ota_GW/ota_gw/protocol/wifi_ap/wifi_ap.c:1:
/Users/maochun/esp32prj/Project_CAM/branch/ota_GW/ota_gw/protocol/wifi_ap/wifi_ap.c: In function 'wifi_init_softap':
/Users/maochun/esp32prj/Project_CAM/branch/ota_GW/ota_gw/protocol/wifi_ap/wifi_ap.c:80:58: error: 'WIFI_ENENT' undeclared (first use in this function); did you mean 'WIFI_EVENT'?
   80 |     ESP_ERROR_CHECK( esp_event_handler_instance_register(WIFI_ENENT,
      |                                                          ^~~~~~~~~~
/Users/maochun/esp32prj/esp-idf/components/esp_common/include/esp_err.h:116:30: note: in definition of macro 'ESP_ERROR_CHECK'
  116 |         esp_err_t err_rc_ = (x);                                        \
      |                              ^
/Users/maochun/esp32prj/Project_CAM/branch/ota_GW/ota_gw/protocol/wifi_ap/wifi_ap.c:80:58: note: each undeclared identifier is reported only once for each function it appears in
   80 |     ESP_ERROR_CHECK( esp_event_handler_instance_register(WIFI_ENENT,
      |                                                          ^~~~~~~~~~
/Users/maochun/esp32prj/esp-idf/components/esp_common/include/esp_err.h:116:30: note: in definition of macro 'ESP_ERROR_CHECK'
  116 |         esp_err_t err_rc_ = (x);                                        \
      |                              ^